2025-07-06T12:41:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16099126401 # 1082
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-06
* notice: last 14d: unq all: 41 80
* notice: prev accum: outdated-unq outdated-all / unq all: 4351 9114 / 4414 9195
* notice: next accum: outdated-unq outdated-all / unq all: 4351 9114 / 4416 9197
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -1 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-06-22 2025-07-06]

2025-07-06T01:59:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16094174665 # 1081
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-06
* notice: last 14d: unq all: 40 79
* notice: prev accum: outdated-unq outdated-all / unq all: 4347 9109 / 4413 9194
* notice: next accum: outdated-unq outdated-all / unq all: 4351 9114 / 4414 9195
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +6 +8 -0 -0 / 6 8
* notice: removed / changed dates: [2025-06-21] / [2025-06-22 2025-07-05]

2025-07-05T12:40:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16088208861 # 1080
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-05
* notice: last 14d: unq all: 43 84
* notice: prev accum: outdated-unq outdated-all / unq all: 4347 9109 / 4412 9193
* notice: next accum: outdated-unq outdated-all / unq all: 4347 9109 / 4413 9194
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +5 +7 -0 -0 / 5 7
* notice: removed / changed dates: [] / [2025-07-05]

2025-07-05T01:46:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16083324202 # 1079