@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-06-24T01:51:18Z",
-  "count" : 2,
+  "timestamp" : "2025-07-07T01:56:15Z",
+  "count" : 1,
   "count_minmax" : [ 1, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
+  "count_decinc" : [ -1, +2 ],
+  "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "uniques_decinc" : [ -1, +2 ]
 }
