@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2025-07-06T12:41:03Z",
-  "count_outdated" : 9114,
-  "uniques_outdated" : 4351,
-  "count" : 9197,
-  "uniques" : 4416,
+  "timestamp" : "2025-07-07T01:56:15Z",
+  "count_outdated" : 9118,
+  "uniques_outdated" : 4354,
+  "count" : 9203,
+  "uniques" : 4421,
   "clones" : [
     {
-      "timestamp": "2025-06-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "count_decinc": [ 3, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 2, 3 ]
-    },
-    {
       "timestamp": "2025-06-23T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-06-24T00:00:00Z",
@@ -133,12 +124,12 @@
     },
     {
       "timestamp": "2025-07-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 8,
+      "count_minmax": [ 2, 8 ],
+      "count_decinc": [ 0, 8 ],
+      "uniques": 7,
+      "uniques_minmax": [ 2, 7 ],
+      "uniques_decinc": [ 0, 7 ]
     }
   ]
 }
